# Fract-ol

./: CMakeLists.txt  Makefile
include/: fractol.h
libft/: get_next_line.c
libmlx/: rgb2c.pl
libmlx/man/man1/: mlx.1  mlx_new_image.1  mlx_pixel_put.1
src/: Makefile  burningship.c  color_shema.c  complex.c  init_env.c  julia.c  key_hooks.c  main.c  mandelbrot.c  map_legend.c  mouse_hooks.c  remove_env.c
